QChannel is now a netty channel